--- a/src/style.css
+++ b/src/style.css
@@ -249,7 +249,13 @@ button:focus {
   width: 100%;
   height: 100%;
 }
-
+#tsparticless {
+  position: fixed !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  width: 100%;
+  height: 100%;
+}
 .home-header {
   padding-top: 80px !important;
 }
